--- a/.github/workflows/fastbuild_6.1.115.yml
+++ b/.github/workflows/fastbuild_6.1.115.yml
@@ -453,6 +453,8 @@ jobs:
             echo "正在启用Re-Kernel支持(用于与Freezer,NoActive等软件配合使用,提升冻结后台能力)…"
             cd kernel_workspace
             echo "CONFIG_REKERNEL=y" >> ./common/arch/arm64/configs/gki_defconfig
+            #sysV
+            echo "CONFIG_SYSVIPC=y" >> ./common/arch/arm64/configs/gki_defconfig
           fi
 
       - name: 启用内核级基带保护
