--- a/.github/workflows/fastbuild_6.1.115.yml
+++ b/.github/workflows/fastbuild_6.1.115.yml
@@ -160,27 +160,16 @@ jobs:
           aria2c -s16 -x16 -k1M https://github.com/cctv18/android_kernel_oneplus_mt6989/archive/refs/heads/oneplus/mt6989_v_15.0.2_ace5_race.zip -o common.zip && 
           unzip -q common.zip && 
           mv "android_kernel_oneplus_mt6989-oneplus-mt6989_v_15.0.2_ace5_race" common &&
-          rm -rf common.zip &
-
-          echo "=== 2. 自动替换 sched.h 中的 SYSVIPC 字段（KABI 合规）==="
-          # 找到包含 include/linux/sched.h 的真正源码根
-          KERNEL_ROOT=$(find common -name sched.h -path '*/include/linux/sched.h' -exec dirname {}/../.. \; | head -1)
-          SCHED_H=$KERNEL_ROOT/include/linux/sched.h
-          [[ -f $SCHED_H ]] || { echo "sched.h 不存在，请检查目录结构"; exit 1; }
-        
-          # 先检查是否存在“直接插成员”的那几行
-          if grep -q 'struct sysv_sem.*sysvsem;' "$SCHED_H" && \
-             grep -q 'struct sysv_shm.*sysvshm;' "$SCHED_H"; then
-              # 找到空闲 KABI 槽位（4 5 在本例中已确认空闲，可再自行调整）
-              sed -i \
-                '/^#ifdef CONFIG_SYSVIPC$/,/^#endif$/{
+          rm -rf common.zip && echo "=== 自动替换 sched.h （KABI 合规） ===" && \
+          KERNEL_ROOT=$(find common -name sched.h -path '*/include/linux/sched.h' -exec dirname {}/../.. \; | head -1) && \
+          SCHED_H=$KERNEL_ROOT/include/linux/sched.h && \
+          [[ -f $SCHED_H ]] || { echo "sched.h 不存在"; exit 1; } && \
+          sed -i '/^#ifdef CONFIG_SYSVIPC$/,/^#endif$/{
                   s/^[[:space:]]*struct sysv_sem[[:space:]]*sysvsem;/ANDROID_KABI_USE(4, struct sysv_sem  sysvsem);/
                   s/^[[:space:]]*struct sysv_shm[[:space:]]*sysvshm;/ANDROID_KABI_USE(5, struct sysv_shm  sysvshm);/
-                }' "$SCHED_H"
-              echo "sched.h 已替换为 KABI 合规写法（槽位 4、5）"
-          else
-              echo "sched.h 未发现旧写法，跳过替换"
-          fi
+                }' "$SCHED_H" && \
+          echo "替换完成" &        
+          
           
           echo "正在克隆llvm-Clang20工具链..." &&
           mkdir -p clang20 &&
