--- a/.github/workflows/fastbuild_6.1.115.yml
+++ b/.github/workflows/fastbuild_6.1.115.yml
@@ -161,8 +161,7 @@ jobs:
           unzip -q common.zip && 
           mv "android_kernel_oneplus_mt6989-oneplus-mt6989_v_15.0.2_ace5_race" common &&
           rm -rf common.zip && echo "=== 自动替换 sched.h （KABI 合规） ===" && \
-          KERNEL_ROOT=$(find common -name sched.h -path '*/include/linux/sched.h' -exec dirname {}/../.. \; | head -1) && \
-          SCHED_H=$KERNEL_ROOT/include/linux/sched.h && \
+          SCHED_H=common/include/linux/sched.h && \
           [[ -f $SCHED_H ]] || { echo "sched.h 不存在"; exit 1; } && \
           sed -i '/^#ifdef CONFIG_SYSVIPC$/,/^#endif$/{
                   s/^[[:space:]]*struct sysv_sem[[:space:]]*sysvsem;/ANDROID_KABI_USE(4, struct sysv_sem  sysvsem);/
